--- a/Lines/Exercise.ipynb
+++ b/Lines/Exercise.ipynb
@@ -4,17 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise list"
-"Types of line equations in the plane.\n"
-"General equation of a line.\n"
-"Canonical equation of a line.\n"
-"Line equation in intercept form on the coordinate axes.\n"
-"Line equation in slope form.\n"
-"Line equation passing through a given point in a given direction.\n"
-"Line equation passing through two given points.\n"
-"Relative positions of lines in the plane.\n"
-"Intersection of two lines.\n"
-"Angle between two lines.\n"
+    "# Exercise list\n"
+"\n",
+"Types of line equations in the plane.\n",
+"\n",
+"General equation of a line.\n",
+"\n",
+"Canonical equation of a line.\n",
+"\n",
+"Line equation in intercept form on the coordinate axes.\n",
+"\n",
+"Line equation in slope form.\n",
+"\n",
+"Line equation passing through a given point in a given direction.\n",
+"\n",,
+"Line equation passing through two given points.\n",
+"\n",
+"Relative positions of lines in the plane.\n",
+"\n",
+"Intersection of two lines.\n",
+"\n",
+"Angle between two lines.\n",
+"\n",
 "Conditions for parallelism and perpendicularity of two lines\n"
    ]
   }
